--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,8 @@
 .App {
   text-align: center;
-  min-height: 50vh;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-header {
@@ -29,11 +20,48 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Cover {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  width: 100%;
+}
+
+.ChoiceBar {
+  width: 100px;
+  height: auto;
+  flex-shrink: 0;
+  background-color: lightgrey; 
+}
+
+.WeekBar {
+  width: 100px;
+  height: auto;
+  flex-shrink: 0;
+  background-color: lightblue; 
+}
+
+.Main {
+  flex-grow: 1;
+  background-color: lightgreen;
+}
+
+
+.Bubble {
+  margin: 10px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: purple;
+  opacity: 50%; 
+  transition: transform 0.2s ease, color 0.2s ease; 
+  text-decoration: none;
+}
+
+.Bubble:hover {
+  transform: scale(1.1);
+  color: green; 
 }
