--- a/src/App.css
+++ b/src/App.css
@@ -59,9 +59,55 @@
   opacity: 50%; 
   transition: transform 0.2s ease, color 0.2s ease; 
   text-decoration: none;
+  background-size: cover; /* Ensures the image covers the entire bubble */
+  background-position: center; /* Centers the image within the bubble */
+}
+
+.Bubble img {
+  width: 100%;
+  height: 100%; 
+  border-radius: 50%;
+  object-fit: cover; 
 }
 
 .Bubble:hover {
   transform: scale(1.1);
   color: green; 
+}
+
+.YearSelector {
+  position: relative; /* Needed for positioning the pseudo-element */
+  display: inline-block; /* Allows the div to fit the content width */
+  font-size: 16px; /* Text size, adjust as needed */
+}
+
+.YearSelector select {
+  border-radius: 25px; /* Pill shape */
+  padding: 10px 20px 10px 10px; /* Top, Right, Bottom, Left Padding */
+  background-color: #f5f5f5; /* Light gray background */
+  color: #333; /* Dark text color */
+  border: none; /* No border */
+  outline: none; /* Removes the focus outline */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+  text-align: center; /* Centers the text */
+  font-size: inherit; /* Inherits the font size from parent */
+  -webkit-appearance: none; /* Removes native styling for Safari */
+  -moz-appearance: none; /* Removes native styling for Firefox */
+  appearance: none; /* Removes native OS styling */
+}
+
+/* Styles to position the arrow correctly */
+.YearSelector::after {
+  content: '▼'; /* The arrow icon */
+  position: absolute;
+  right: 7px; 
+  top: 50%; /* Centers vertically */
+  transform: translateY(-50%);
+  pointer-events: none; /* Allows the click to pass through to the select element */
+  font-size: inherit; /* Inherits the font size from parent */
+}
+
+
+.TargetIdentity {
+  background-color: pink;
 }
